e2e/tests/all/snapshots/skeleton_rest_desktop.snap
---
source: e2e/src/suite.rs
description: skeleton at desktop (rest)
expression: tree
---
button "Reload"
  StaticText "Reload"
paragraph
  StaticText "AL"
paragraph
  StaticText "Ada Lovelace"
