e2e/tests/all/snapshots/skeleton_rest_mobile.snap
---
source: e2e/src/suite.rs
description: skeleton at mobile (rest)
expression: tree
---
button "Reload"
  StaticText "Reload"
generic
  generic
    paragraph
      StaticText "AL"
  generic
    paragraph
      StaticText "Ada Lovelace"
