e2e/tests/all/snapshots/slider_rest_desktop.snap
---
source: e2e/src/suite.rs
description: slider at desktop (rest)
expression: tree
---
generic
  generic
    generic
    slider "Volume" = 40 [valuemax=100] [valuemin=0]
    tooltip "40"
      StaticText "40"
