e2e/tests/all/snapshots/slider_rest_mobile.snap
---
source: e2e/src/suite.rs
description: slider at mobile (rest)
expression: tree
---
generic
  generic
    generic
    slider "Volume" [valuemax=100] [valuemin=0]
    tooltip "40"
      StaticText "40"
