e2e/tests/all/snapshots/slider_states_rest_mobile.snap
---
source: e2e/src/suite.rs
description: slider_states at mobile (rest)
expression: tree
---
LabelText
  StaticText "Quality"
slider "Quality" = 1 [valuemax=2] [valuemin=0]
LabelText
  StaticText "Gain"
slider "Gain" = 50 [valuemax=100] [valuemin=0]
LabelText
  StaticText "Fixed"
slider "Fixed" = 30 [valuemax=100] [valuemin=0]
slider "Locked" = 70 [disabled] [valuemax=100] [valuemin=0]
tooltip "Medium"
  StaticText "Medium"
