e2e/tests/all/snapshots/sortable-horizontal_rest_desktop.snap
---
source: e2e/src/suite.rs
description: sortable-horizontal at desktop (rest)
expression: tree
---
list
  listitem [level=1]
    button "Reorder Alpha"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Alpha"
    button "Move Item 1 backward" [disabled]
    button "Move Item 1 forward"
  listitem [level=1]
    button "Reorder Beta"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Beta"
    button "Move Item 2 backward"
    button "Move Item 2 forward"
  listitem [level=1]
    button "Reorder Gamma"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Gamma"
    button "Move Item 3 backward"
    button "Move Item 3 forward"
  listitem [level=1]
    button "Reorder Delta"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Delta"
    button "Move Item 4 backward"
    button "Move Item 4 forward" [disabled]
status [atomic] [live=polite]
paragraph
  StaticText "Alpha Beta Gamma Delta"
