e2e/tests/all/snapshots/sortable-horizontal_rest_mobile.snap
---
source: e2e/src/suite.rs
description: sortable-horizontal at mobile (rest)
expression: tree
---
list
  listitem [level=1]
    button "Reorder Alpha"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Alpha"
    button "Move Item 1 backward" [disabled]
    button "Move Item 1 forward"
  listitem [level=1]
    button "Reorder Beta"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Beta"
    button "Move Item 2 backward"
    button "Move Item 2 forward"
  listitem [level=1]
    button "Reorder Gamma"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Gamma"
    button "Move Item 3 backward"
    button "Move Item 3 forward"
  listitem [level=1]
    button "Reorder Delta"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Delta"
    button "Move Item 4 backward"
    button "Move Item 4 forward" [disabled]
status [atomic] [live=polite]
paragraph
  StaticText "Alpha Beta Gamma Delta"
