e2e/tests/all/snapshots/sortable-lifted_rest_mobile.snap
---
source: e2e/src/suite.rs
description: sortable-lifted at mobile (rest)
expression: tree
---
button "Before"
  StaticText "Before"
list
  listitem [level=1]
    button "Reorder Alpha"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Alpha"
    button "Move Alpha up" [disabled]
    button "Move Alpha down"
  listitem [level=1]
    button "Reorder Beta"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Beta"
    button "Move Beta up"
    button "Move Beta down"
  listitem [level=1]
    button "Reorder Gamma"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Gamma"
    button "Move Gamma up"
    button "Move Gamma down"
  listitem [level=1]
    button "Reorder Delta"
      description "Use the move buttons to reorder the item."
    paragraph
      StaticText "Delta"
    button "Move Delta up"
    button "Move Delta down" [disabled]
status [atomic] [live=polite]
paragraph
  StaticText "Alpha Beta Gamma Delta"
paragraph
button "After"
  StaticText "After"
